# nekos

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  grub.cfg  justfile  linker.ld
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agent/: reviewer.md
.opencode/reviewer/: opencode-reviewer.json
.opencode/reviewer/knowledge/: README.md  facts.jsonl
.opencode/reviewer/scripts/: kernel-compile-test  mcp-review-bot  mcp-review-bot.py  mcp-reviewer-facts  mcp-reviewer-facts.py  reviewer-facts-add  reviewer-facts-search
.opencode/skills/: address-reviewer-comments.md  bit-packing-descriptors.md  ci-pipeline.md  clang-lifetime-safety.md  kernel-compile-test-tool.md  neovim-debug-config.md  pr-description-from-diff.md  qemu-bochs-kernel-tests.md  reviewer-workflow.md  write-tests.md
.opencode/skills/address-reviewer-comments/: SKILL.md
.opencode/skills/bit-packing-descriptors/: SKILL.md
.opencode/skills/ci-pipeline/: SKILL.md
.opencode/skills/clang-lifetime-safety/: SKILL.md
.opencode/skills/kernel-compile-test-tool/: SKILL.md
.opencode/skills/neovim-debug-config/: SKILL.md
.opencode/skills/pr-description-from-diff/: SKILL.md
.opencode/skills/qemu-bochs-kernel-tests/: SKILL.md
.opencode/skills/reviewer-workflow/: SKILL.md
.opencode/skills/write-tests/: SKILL.md
cmake/: AddUnityTests.cmake
include/: extern_c.h
include/stdlib/: string.h
kernel/: CMakeLists.txt
kernel/include/: apic.hpp  gdt.hpp  idt.hpp  idt_handler.hpp  io.h
kernel/include/nekos/: assert.hpp  kernel.hpp  kprintf.hpp
kernel/include/nekos/drivers/: serial.hpp  vga.hpp
kernel/include/nekos/interrupts/: apic.hpp  io_apic.hpp  madt.hpp
kernel/src/: apic.cpp  boot.asm  gdt.cpp  idt.cpp  idt_handler.cpp  io.c  runtime.cpp
kernel/src/nekos/: assert.cpp  kernel.cpp  kprintf.cpp
kernel/src/nekos/drivers/: serial.cpp  vga.cpp
kernel/src/nekos/interrupts/: apic.cpp  io_apic.cpp  madt.cpp
kernel/tests/: test.cpp  test.hpp
kernel/tests/gdt/: gdt_helpers.hpp  test_gdt.cpp
kernel/tests/idt/: idt_helper.hpp  test_idt.cpp
kernel/tests/vga/: test_kprintf.cpp  vga_assert.cpp  vga_assert.hpp
libc/: CMakeLists.txt
libc/include/: attributes.h  stdlib.h  string.h
libc/src/: stdlib.c  string.c
libc/src/string/: string.c  strlen.c
libc/tests/: stdlib_test.c  string_test.c
libcxx/: CMakeLists.txt
scripts/: bochs-kernel-test.sh  kernel-test-common.sh  qemu-debug.sh  qemu-kernel-test.sh
src/: boot.asm
src/nekos/: kernel.cpp
src/nexos/: kernel.cpp
src/stdlib/: string.c
